Revision history for App-skos2jskos

{{$NEXT}}

0.2.0  2019-05-02 10:57:08 CEST
    - Export concepts in ndjson
    - Detect and warn on non-literals

0.1.7  2019-04-15 13:26:45 CEST
    - Support skos:broader and all note types

0.1.6  2019-03-08 09:10:04 CET
    - Fix field inScheme
    - Add missing dependency JSON

0.1.5  2019-03-07 13:42:16 CET
    - Add option --debug
    - Include creator and contributor in scheme
    - Include scopeNotes in concepts

0.1.4  2016-03-02 11:55:57 CET
    - Align with JSKOS 0.1.0

0.1.3  2015-12-02 14:21:36 CET
    - include scheme description
    - remove trailing newline in output (#1)

0.1.2  2015-11-03 15:05:34 CET
    - add missing dependency
    - detect wrong --scheme option

0.1.1  2015-11-02 14:30:36 CET
    - include vann:preferredNamespacePrefix (concept scheme notation)
    - include skos:inScheme (concepts)
    - add tests

0.1.0  2015-11-02 12:50:22 CET
    - First release 
