@@ -49,7 +49,6 @@
          "requires" : {
             "Test::More" : "0",
             "Test::Output" : "0",
-            "Test::PerlTidy" : "0",
             "Test::RequiresInternet" : "0"
          }
       }
@@ -66,6 +65,6 @@
          "web" : "https://github.com/gbv/skos2jskos"
       }
    },
-   "version" : "0.2.0"
+   "version" : "0.2.1"
 }
 
