@@ -6,6 +6,14 @@ App::skos2jskos - Convert SKOS/RDF to JSKOS format
 
 See [skos2jskos](https://metacpan.org/pod/skos2jskos) command line script.
 
+# INSTALLATION
+
+    cpanm App::skos2jskos
+
+To speed up installation, install required Perl modules as system packages, e.g.
+
+    sudo apt-get install librdf-query-perl librdf-query-client-perl
+
 # AUTHOR
 
 Jakob Voss <voss@gbv.de>
